# sample-glue-analysis-agent

./: .gitignore  AmazonQ.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/agents/: Dockerfile  README.md  main.py  package.json  pyproject.toml
apps/agents/resources/: schema.json
apps/agents/src/: app.py
apps/agents/src/services/: athena_service.py  glue_service.py
apps/agents/src/utils/: log_utils.py
apps/agents/tests/unit/services/: test_athena_service.py  test_glue_service.py
apps/controller/: Dockerfile  package.json  pyproject.toml
apps/controller/scripts/: start-lambda-rie.sh
apps/controller/src/: app.py  bedrock.py  constants.py  models.py  websocket_client.py
apps/controller/src/factory/: __init__.py  service_factory.py
apps/infra/: package.json  parameter.ts  tsconfig.json
apps/infra/lib/: infra-stack.ts  waf-stack.ts
apps/infra/lib/constructs/: agent.ts  api.ts  data-catalog.ts  web-app.ts
apps/infra/test/: infra.test.ts
apps/web/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/: AuthButton.tsx  AuthGuard.tsx  AutoScrollToggle.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useChat.ts
apps/web/src/lib/: amplifyConfigure.ts
apps/web/src/types/: index.ts
apps/web/src/utils/: log_utils.test.ts  log_utils.ts
instructions/: bedrock-invokeagent-payload.md
scripts/: update-env.sh  upload-data.js
testdata/: order.csv
(+1 files in other folders)
